k8s/redis-massive/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-massive
  labels:
    app.kubernetes.io/name: redis-massive
spec:
  selector:
    app.kubernetes.io/name: redis-massive
  ports:
    - name: redis
      port: 6379
      targetPort: redis
